2005-04-18  Kim F. Storm  <storm@cua.dk>

	* emulation/cua-base.el (cua--pre-command-handler): Add more
	elaborate check for shift modifier on non-window systems.

2005-04-18  Lars Hansen  <larsh@math.ku.dk>

	* desktop.el: Make "--no-desktop" turn off `desktop-save-mode'.

2005-04-18  Kim F. Storm  <storm@cua.dk>

	* tooltip.el (tooltip-show): Change second arg to USE-ECHO-AREA
	and make it optional.  Don't test tooltip-gud-echo-area here.
	(tooltip-gud-process-output, gdb-tooltip-print): Pass
	tooltip-gud-echo-area to tooltip-show.
	(tooltip-help-tips): Remove second optional arg to tooltip-show.

2005-04-18  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* tooltip.el (tooltip-mode): `emacs-quick-startup' and
	`display-graphic-p' may not be bound yet.

2005-04-17  Luc Teirlinck  <teirllm@auburn.edu>

	* startup.el (command-line): No longer enable Xterm Mouse mode by
	default in terminals compatible with xterm.

	* xt-mouse.el (xterm-mouse-mode): Set init value back to nil.

2005-04-18  Nick Roberts  <nickrob@snap.net.nz>

	* tooltip.el (tooltip-gud-echo-area): Rename from
	tooltip-use-echo-area.
	(tooltip-show, tooltip-gud-process-output, gdb-tooltip-print)
	(tooltip-help-tips): Allow GUD tooltips to be displayed in echo
	area independently of where help tooltips are displayed.

2005-04-17  David Kastrup  <dak@gnu.org>

	* cus-theme.el (custom-theme-write-variables): Quote variables
	where necessary.

2005-04-17  Richard M. Stallman  <rms@gnu.org>

	* simple.el (yank-excluded-properties): Add follow-link to value.

	* jka-compr.el (jka-compr-compression-info-list): Fix custom type.

	* startup.el (fancy-splash-max-time): Just 30 seconds.
	(fancy-splash-delay): Just 7.
	(fancy-splash-screens): No time limit other than fancy-splash-max-time.

	* loadhist.el (unload-feature): Update for new format of load-history.
	Simplify the code.

	* mail/rmail.el (rmail-ignored-headers): Ignore more headers